--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,12 @@ jobs:
           jupyter-book build .
 
       - name: Deploy to GitHub Pages
+        env:
+          GIT_AUTHOR_NAME: github-actions
+          GIT_AUTHOR_EMAIL: github-actions@github.com
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          ghp-import -n -p -f _build/html
+          git config --global user.name "${GIT_AUTHOR_NAME}"
+          git config --global user.email "${GIT_AUTHOR_EMAIL}"
+          ghp-import -n -p -f _build/html -m "Deploy book" -r origin
 
