--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,10 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -19,17 +21,22 @@ jobs:
         run: |
           pip install -U jupyter-book ghp-import
 
-      - name: Build JupyterBook
+      - name: Build the book
         run: |
           jupyter-book build .
 
       - name: Deploy to GitHub Pages
         env:
-          GIT_AUTHOR_NAME: github-actions
-          GIT_AUTHOR_EMAIL: github-actions@github.com
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git config --global user.name "${GIT_AUTHOR_NAME}"
-          git config --global user.email "${GIT_AUTHOR_EMAIL}"
-          ghp-import -n -p -f _build/html -m "Deploy book" -r origin
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git clone https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} gh-pages
+          cd gh-pages
+          git rm -rf .
+          cp -r ../_build/html/* .
+          touch .nojekyll
+          git add .
+          git commit -m "🚀 Deploy JupyterBook" || echo "No changes to commit"
+          git push origin HEAD:gh-pages --force
 
