--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+       - name: Install dependencies
         run: |
-          pip install -U jupyter-book ghp-import
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Build the book
         run: |
