Experimenting with template16

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
+title: Scott's Thoughts
+author: Scott Payseur, PhD
 logo: logo.png
-copyright: 2025
+copyright: "2025"
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
